[gd_scene load_steps=3 format=3 uid="uid://coyovsj2u8w23"]

[ext_resource type="Script" path="res://Scenes/Prefabs/BoosterStoragePrefab.gd" id="1_15p3k"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="1_fllub"]

[node name="PlanStoragePrefab" type="Control"]
custom_minimum_size = Vector2(550, 55)
layout_mode = 3
anchors_preset = 0
offset_right = 553.0
offset_bottom = 57.0
scale = Vector2(1.6, 1.6)
script = ExtResource("1_15p3k")

[node name="PlanName" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 6.875
offset_right = 269.0
offset_bottom = 49.875
theme_override_fonts/font = ExtResource("1_fllub")
theme_override_font_sizes/font_size = 40
text = "BoosterName"

[node name="UseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 8.125
offset_right = 538.0
offset_bottom = 48.125
theme_override_font_sizes/font_size = 20
text = "UÅ¼yj"

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 384.375
offset_top = 11.25
offset_right = 446.375
offset_bottom = 46.25
theme_override_fonts/font = ExtResource("1_fllub")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[connection signal="pressed" from="UseButton" to="." method="_on_use_button_pressed"]
